--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "predev": "rimraf dist",
+    "dev": "npm-run-all -p -r dev:nest dev:next:wait",
+    "dev:next": "cross-env NEST_PORT=5000 next dev",
+    "dev:next:wait": "npm-run-all -s dev:nest:wait dev:next",
+    "dev:nest": "cross-env NEST_PORT=5000 CLI=NEST nest start --path ./tsconfig.nest.json --watch --preserveWatchOutput",
+    "dev:nest:wait": "wait-on tcp:5000",
     "build": "next build",
     "start": "next start",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -20,7 +25,7 @@
     "@nestjs/graphql": "^7.7.0",
     "@nestjs/platform-express": "^7.5.1",
     "apollo-server-express": "^2.19.0",
-    "create-vercel-http-server-handler": "0.0.12",
+    "create-vercel-http-server-handler": "0.0.15",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.1",
     "next": "10.0.1",
@@ -37,25 +42,34 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/eslint": "^7.2.4",
+    "@types/eslint-config-prettier": "^6.11.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/prettier": "^2.1.5",
     "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
+    "@types/rimraf": "^3.0.0",
     "@types/supertest": "^2.0.10",
+    "@types/wait-on": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "babel-plugin-transform-typescript-metadata": "^0.3.1",
+    "cross-env": "^7.0.2",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.7",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "wait-on": "^5.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
